--- a/css/destino.css
+++ b/css/destino.css
@@ -10161,9 +10161,162 @@ textarea.form-control-lg {
     margin: 10px;
   }
 }
-
-
-
+/*·· Smartphone ··*/
+@media (max-width: 480px) {
+  #grids {
+    display: grid;
+    background-color: rgb(226, 192, 226);
+    grid-template-areas: "encabezado " "menuDos " "informacion " "fotoUno " "menu_tres " "wireframe " "pie_de_pagina ";
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 3fr 1fr 2fr 1fr 2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  #header {
+    display: grid;
+    grid-template-areas: "logo compras" "menu_principal menu_principal";
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    align-items: center;
+  }
+  /* Nombre de los Items*/
+  .img {
+    grid-area: logo;
+  }
+  .desplegable {
+    grid-area: menu_principal;
+  }
+  .carrito {
+    grid-area: compras;
+  }
+  /*Fin*/
+  /* Estilo general de Mobile*/
+  .centrar {
+    text-align: center;
+    background-color: #f2d9e7;
+    border: #f288c6 dotted 2px;
+    font-size: 250%;
+    color: #e06baf;
+    padding: 2vh 5vh;
+    margin: 30px;
+  }
+  header {
+    display: block;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .slide {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: right;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+  }
+  nav {
+    display: block;
+    flex-flow: column nowrap;
+    align-items: baseline;
+    justify-content: left;
+  }
+  .desplegable {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+  }
+}
+/*·· Tablet ··*/
+@media (min-width: 481px) and (max-width: 1023px) {
+  body {
+    background-color: rgb(216, 87, 216);
+  }
+  .slides {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: baseline;
+    align-items: center;
+  }
+  #grids {
+    display: grid;
+    /*background-color: rgb(226, 192, 226);*/
+    grid-template-areas: "encabezado " "menuDos " "informacion " "fotoUno " "menu_tres " "wireframe " "pie_de_pagina ";
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 3fr 1fr 2fr 1fr 2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  header {
+    display: block;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  #header {
+    display: grid;
+    grid-template-areas: "logo menu_principal compras";
+    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+  }
+  /* Nombre de los Items*/
+  .img {
+    grid-area: logo;
+  }
+  .desplegable {
+    grid-area: menu_principal;
+  }
+  .carrito {
+    grid-area: compras;
+  }
+  /*Fin*/
+  .galeria img {
+    width: 50%;
+    height: 70vh;
+  }
+}
+/*·· Desktop ··*/
+@media (min-width: 1024px) {
+  body {
+    background-color: rgb(140, 97, 140);
+  }
+  #header {
+    display: grid;
+    grid-template-areas: "logo menu_principal compras";
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+    align-items: center;
+  }
+  /* Nombre de los Items*/
+  .img {
+    grid-area: logo;
+  }
+  .desplegable {
+    grid-area: menu_principal;
+  }
+  .carrito {
+    grid-area: compras;
+  }
+  /*Fin*/
+  .fotoUno {
+    display: flex;
+    justify-content: space-around;
+  }
+  .galeria img {
+    width: 40%;
+    height: 80vh;
+    margin: 5px;
+  }
+}
+/* EXTEND */
+/* MIXINS */
 /* Variables */
 /* Main Sobre nosotros */
 .hero {
